--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
   </div>
 
 
-
+  <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+  <df-messenger intent="WELCOME" chat-title="rey" agent-id="74a67f2c-9810-45f2-b99f-b8fb36dc26c3" language-code="pt-br">
+  </df-messenger>
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
